fixing mobile horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
 }
 
 html, body {
-    max-width: 100vw;
     overflow-x: hidden;
 }
 
@@ -395,7 +394,6 @@ footer>div:not(.socials) {
 	}
 	
 	html, body {
-		max-width: 100vw;
 		overflow-x: hidden;
 	}
 	
